# sina

./: .gitignore  CHANGELOG.md  LICENSE  sample.sina  sina.cabal
app/: Main.hs
src/: Sina.hs
test/: Main.hs
